<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.activity.task.TaskActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/main_screen_margin"
                android:paddingBottom="@dimen/main_screen_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_type_utilities"
                    android:id="@+id/tvTaskTitle"
                    style="@style/TextView.TaskType"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTaskStatus"
                    android:layout_below="@+id/tvTaskTitle"
                    android:textColor="@color/white"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/rounded_textview_shape"/>
            </RelativeLayout>

            <View
                android:background="@color/divider_color"
                android:layout_width="match_parent"
                android:layout_height="2.0dip"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/main_screen_margin"
                android:paddingBottom="@dimen/main_screen_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/created_text"
                    android:id="@+id/tvTaskCreatedOnText"
                    style="@style/TextView.TaskText"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTaskCreatedOnValue"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    style="@style/TextView.TaskValue"/>
            </RelativeLayout>

            <View
                android:background="@color/divider_color"
                android:layout_width="match_parent"
                android:layout_height="2.0dip" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/main_screen_margin"
                android:paddingBottom="@dimen/main_screen_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registered_text"
                    android:id="@+id/tvTaskRegisteredOnText"
                    style="@style/TextView.TaskText"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTaskRegisteredOnValue"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    style="@style/TextView.TaskValue"/>
            </RelativeLayout>

            <View
                android:background="@color/divider_color"
                android:layout_width="match_parent"
                android:layout_height="2.0dip" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/main_screen_margin"
                android:paddingBottom="@dimen/main_screen_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deadline_text"
                    android:id="@+id/tvTaskSolveByText"
                    style="@style/TextView.TaskText"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTaskSolveByValue"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    style="@style/TextView.TaskValue"/>
            </RelativeLayout>

            <View
                android:background="@color/divider_color"
                android:layout_width="match_parent"
                android:layout_height="2.0dip" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/main_screen_margin"
                android:paddingBottom="@dimen/main_screen_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assigned_text"
                    android:id="@+id/tvAssignedText"
                    style="@style/TextView.TaskText"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvAssignedValue"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    style="@style/TextView.TaskValue"/>
            </RelativeLayout>

            <View
                android:background="@color/divider_color"
                android:layout_width="match_parent"
                android:layout_height="2.0dip" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/main_screen_margin"
                android:paddingBottom="@dimen/main_screen_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTaskDescription"
                    style="@style/TextView.TaskText"/>
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvTaskPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
